--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -98,6 +98,14 @@
         <script th:inline="javascript">
 
             window.onload = () => {
+                let href = window.location.href
+                const isUri = href.includes("?page")
+
+                if (!isUri) {
+                    href = "?page=1&size=10"
+                } else {
+                    href = href.substring(href.indexOf("?"))
+                }
 
                 const session = [[${session.session}]]
                 console.log(session)
@@ -111,7 +119,9 @@
                 // NOTE : 모임 상세 & 참여자 목록에 쓰기 위해 전역으로 선언헀음,
                 let formattedStartAt = "";
 
-                backBtn.addEventListener("click", toBack)
+                backBtn.addEventListener("click", () => {
+                    window.location.href = `/meetings${href}`
+                })
 
                 // REST API 호출 및 응답 처리
                 fetch(`/api/meeting/${meetingId}`)
@@ -148,7 +158,6 @@
                                     <button class="btn btn-primary btn-xl"
                                                 style="height: 50px;
                                                         padding: 10px 36px;
-                                                        display: none;
                                                         width: auto;
                                                         min-width: 125px;"
                                                 type="button" id='participate'> 참가하기 </button>
@@ -262,20 +271,24 @@
                             if(participatingMeetingId === parseInt(meetingId)) {
                                 displayButton(leaveBtn)
                                 displayButton(chattingBtn)
-                            } else {
-                                displayButton(participateBtn)
+                                disappearButton(participateBtn)
                             }
                         })
                 }
                 // 참여 이벤트
                 const participate = meetingId => {
 
-                    const participateMeetingRequestDto = {
-                        "meetingId": meetingId,
-                        "memberId": session.memberId,
+                    isLogin(session)
+
+                    if(session && confirm("참여하시겠습니까?")) {
+                        const participateMeetingRequestDto = {
+                            "meetingId": meetingId,
+                            "memberId": session.memberId,
+                        }
+
+                        callRestApi(participateEvent, "POST", "/api/meeting/participate", participateMeetingRequestDto)
                     }
 
-                    callRestApi(participateEvent, "POST", "/api/meeting/participate", participateMeetingRequestDto)
                 }
                 // 참여 이벤트 적용
                 const makeParticipateEvent = () => {
@@ -300,11 +313,16 @@
                 }
                 // 참여 취소 이벤트
                 const leave = () => {
-                    const leaveRequestDto = {
-                        "memberId" : session.memberId,
-                    }
 
-                    callRestApi(leaveEvent, "POST", "/api/meeting/leave", leaveRequestDto)
+                    isLogin(session)
+
+                    if(session && confirm("취소하시겠습니까?")) {
+                        const leaveRequestDto = {
+                            "memberId": session.memberId,
+                        }
+
+                        callRestApi(leaveEvent, "POST", "/api/meeting/leave", leaveRequestDto)
+                    }
                 }
                 // 참여 취소 이벤트 적용
                 const makeLeaveButtonEvent = () => {
