--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -14,16 +14,21 @@
                                 color: white;
                                 align-items: center;">
                         <div style="text-align: left;
-                                    padding: 0px 10px;"
+                                    padding: 0px 10px;
+                                    font-family: emoji;"
                              id="toBack">
                             <i class="bi bi-arrow-counterclockwise"></i>
                         </div>
                         <h3 class="text-white font-weight-bold"
                             style="flex: 1;
-                                    padding-right: 30px;
                                     margin-bottom: 0px;">
                             Let's Mo Gak Ko !
                         </h3>
+                        <div style="text-align: right;
+                                    padding: 0px 10px;"
+                             id="toMain">
+                            <i class="bi bi-house-door"></i>
+                        </div>
                     </div>
                     <div style="display: block;">
                         <hr class="divider">
@@ -60,6 +65,8 @@
 
                 const meetingsDiv = document.querySelector(".meetings")
 
+                const mainBtn = document.querySelector("#toMain")
+                mainBtn.addEventListener("click", toMain)
                 const backBtn = document.querySelector("#toBack")
                 backBtn.addEventListener("click", toMain)
 
