--- a/moinda-api/src/main/resources/templates/meeting/register.html
+++ b/moinda-api/src/main/resources/templates/meeting/register.html
@@ -47,16 +47,21 @@
                                 color: white;
                                 align-items: center;">
                         <div style="text-align: left;
-                                    padding: 0px 10px;"
+                                    padding: 0px 10px;
+                                    font-family: emoji;"
                              id="toBack">
                             <i class="bi bi-arrow-counterclockwise"></i>
                         </div>
                         <h3 class="text-white font-weight-bold"
                             style="flex: 1;
-                                    padding-right: 30px;
                                     margin-bottom: 0px;">
                             Let's Make Mo Gak Ko!
                         </h3>
+                        <div style="text-align: right;
+                                    padding: 0px 10px;"
+                             id="toMain">
+                            <i class="bi bi-house-door"></i>
+                        </div>
                     </div>
                     <div style="display: block;">
                         <hr class="divider">
@@ -153,6 +158,8 @@
                 const endDate = document.querySelector("input[id='endDate']")
                 const endTime = document.querySelector("input[id='endTime']")
 
+                const mainBtn = document.querySelector("#toMain")
+                mainBtn.addEventListener("click", toMain)
                 const backBtn = document.querySelector("#toBack")
                 backBtn.addEventListener("click", toBack)
 
