[#112] refactor: Sync to OAuth2 Property in MemberJpaEntity Properties

--- a/moinda-api/src/main/resources/templates/signup.html
+++ b/moinda-api/src/main/resources/templates/signup.html
@@ -4,6 +4,7 @@
 <th:block th:replace="~{fragment/fragment :: setBody(~{ :: body})}">
     <th:block th:fragment="body">
 
+<!--  NOTE : 미사용 페이지  -->
         <!-- Masthead-->
         <header class="masthead" style="height: 100%">
             <div class="container px-4 px-lg-5 h-75">
